Fix display of formats in academic theme and prevent wrapping

--- a/vufind/web/interface/themes/academic/css/academic.css
+++ b/vufind/web/interface/themes/academic/css/academic.css
@@ -160,11 +160,11 @@ div#ft_contents {
 }
 
 #fullRecordTitleDetails {
-	width: 475px;
+	width: 405px;
 }
 
 #fullRecordTitleDetails .resultValue {
-	max-width: 365px;
+	max-width: 295px;
 }
 
 .recordcover {
